--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -1,8 +1,13 @@
 .loader {
   width: 100%;
-  height: calc(100vh - 100px);
+  height: 100vh;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 300;
+  background-color: black;
+  background-size: cover;
+
+  color: #fff;
 }
