--- a/src/routes/Home.module.css
+++ b/src/routes/Home.module.css
@@ -1,23 +1,30 @@
 .container {
   height: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-.slide__box {
-  padding: 0 0 40px 0;
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
 }
 
-.title {
-  text-align: center;
-  font-size: 42px;
+.movies {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(400px, 1fr));
+  grid-gap: 100px;
+  padding: 50px;
+  width: 80%;
+  padding-top: 70px;
 }
 
-.title a {
-  color: #ffffff;
-  text-decoration: none;
-}
-.title a:hover {
-  text-decoration: underline;
-}
-.title a i {
-  margin-right: 20px;
+@media screen and (max-width: 1090px) {
+  .movies {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
 }
