--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -1,13 +1,13 @@
 .loader {
   width: 100%;
-  height: 100vh;
+  height: 75vh;
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   font-weight: 300;
-  background-color: black;
   background-size: cover;
+  font-size: 50px;
 
-  color: #fff;
+  color: black;
 }
