--- a/src/components/Point.module.css
+++ b/src/components/Point.module.css
@@ -1,20 +1,17 @@
 .bg {
   position: fixed;
-  top: 0;
+  /* top: 0; */
   left: 0;
-
-  /* Preserve aspet ratio */
-  min-width: 100%;
-  min-height: 100%;
-  filter: brightness(50%);
+  width: 100%;
+  height: 100%;
+  filter: brightness(75%);
 }
 
 .show {
   position: absolute;
-  top: 20%;
-  left: 20%;
+  top: 25%;
+  left: 35%;
   z-index: 8;
-
   display: flex;
   align-items: center;
 }
@@ -42,18 +39,19 @@
 }
 
 .title a {
-  color: white;
+  color: black;
+  text-shadow: 2.5px 2.5px 2.5px;
   text-decoration: none;
 }
 
 .textbox ul {
   padding: 0 0 0 20px;
-  color: white;
+  color: black;
   font-size: 18px;
 }
 
 .textbox p {
-  color: whitesmoke;
+  color: black;
   font-weight: 300;
   font-size: 14px;
 }
